<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="35dp"
    android:paddingEnd="30dp"
    android:paddingTop="30dp"
    android:orientation="vertical">

    <TextView
        android:text="@string/Trip_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textSize="18sp"
        android:fontFamily="sans-serif"
        android:textColor="@android:color/black" />

    <TextView
        android:text="@string/Tip_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textSize="18sp"
        android:fontFamily="sans-serif"
        android:textColor="@android:color/black"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/editText2"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Trip_line"
        android:ems="10"
        android:id="@+id/editText2"
        android:inputType="number"
        android:digits="0123456789."
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:textAlignment="textStart" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Tip_line"
        android:id="@+id/editText3"
        android:inputType="number"
        android:digits="0123456789."
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:textAlignment="textStart" />

    <TextView
        android:text="@string/CustomTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textSize="18sp"
        android:fontFamily="sans-serif"
        android:textColor="@android:color/black"
        android:layout_below="@+id/editText3"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/Split"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textSize="18sp"
        android:fontFamily="sans-serif"
        android:textColor="@android:color/black"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:digits="1234567890"
        android:text="1"
        android:ems="10"
        android:id="@+id/editText5"
        android:textAlignment="textStart"
        android:layout_below="@+id/textView5"
        android:layout_alignEnd="@+id/button_calc" />

    <Button
        android:text="@string/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_calc"
        android:onClick="do_calc"
        android:layout_below="@+id/editText5"
        android:layout_alignEnd="@+id/switch1" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switch1"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignParentEnd="true" />

</RelativeLayout>